# vacation-manager

./: .env.example  .gitignore  README.md  devenv.nix  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docker/app/: Dockerfile  start.sh
docker/nginx/: Dockerfile  nginx.conf
vacation_manager/accounts/: urls.py  views.py
vacation_manager/accounts/templates/: base.html
vacation_manager/accounts/templates/registration/: login.html  signup.html
vacation_manager/holidays/: admin.py  urls.py  views.py
vacation_manager/holidays/forms/: __init__.py  holiday_request_form.py  parameter_form.py
vacation_manager/holidays/management/commands/: initialize_holiday.py
vacation_manager/holidays/migrations/: 0001_initial.py  0002_reformat_holiday_parameter.py  0003_alter_holiday_month_number.py  0004_alter_parameter_extra_holiday_current_year_and_more.py  0005_parameter_extra_holiday_month_accumulation_and_more.py
vacation_manager/holidays/models/: __init__.py  holiday.py  parameter.py
vacation_manager/holidays/models/enum/: __init__.py  month.py  year.py
vacation_manager/holidays/templates/: base.html
vacation_manager/holidays/templates/holidays/: holiday_request.html  home.html  parameters.html
vacation_manager/holidays/templatetags/: math_filters.py  month_name.py
vacation_manager/theme/static_src/: package-lock.json  package.json  tailwind.config.js
vacation_manager/theme/static_src/src/: styles.css
vacation_manager/theme/templates/layout/: base.html  base_with_header.html  base_without_header.html
vacation_manager/vacation_manager/: asgi.py  settings.py  urls.py  wsgi.py
