[project]
name = "vacation-manager"
version = "0.1.0"
description = "Gestion des vacances"
authors = [
    {name = "RusHiiii",email = "fdamiens@itnetwork.fr"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "psycopg2 (>=2.9.10,<3.0.0)",
    "django-tailwind[reload] (>=4.2.0,<5.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
django = "^5.2.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
