[project]
name = "vacation-manager"
version = "0.1.0"
description = "Gestion des vacances"
authors = [
    {name = "RusHiiii",email = "fdamiens@itnetwork.fr"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "^5.2.5"
django-tailwind = { version = ">=4.2.0,<5.0.0", extras = ["reload"] }
gunicorn = ">=23.0.0,<24.0.0"
psycopg = { version = ">=3.1,<4.0", extras = ["binary"] }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
